<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bob Evans Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Side Menu Tutorial</string>
    <string name="Fragment1">Breakfast</string>
    <string name="Fragment2">This is Fragment 2</string>
    <string name="Fragment3">This is Fragment 3</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="icon">Icon</string>
    <string name="breakfast">Breakfast</string>
    <string name="alacarte">A La Carte</string>
    <string name="ffeb">Farm-Fresh Egg Breakfasts</string>
    <string name="sausageTitle">Bob Evans Sausage Classics</string>
    <string name="hotgridz">Hot Off The Griddle</string>
    <string name="eggOmeletsTitle">Stuffed 3-Egg Omelets</string>
    <string name="carryOut">Carry Out</string>
    <string name="locations">Locations</string>
    <string name="cartAdd">Add to Order</string>
    <string name="login">Log In</string>

</resources>
